@@ -11,7 +11,7 @@
     "angular-ui-router": "1.0.20",
     "angular-file-upload": "latest",
     "angular-material": "1.1.10",
-    "file-saver.js": "latest",
+    "FileSaver": "latest",
     "lodash": "latest",
     "ng-sortable": "1.3.7",
     "breakpoint-sass": ">=2.4.2"
