@@ -10,6 +10,8 @@ Bug fixes
  - [sogo-tool] fixed "manage-acl unsubscribe" command (#4591)
  - [web] fixed handling of collapsed/expanded mail accounts (#4541)
  - [web] fixed handling of duplicate recipients (#4597)
+ - [web] fixed folder export when XSRF validation is enabled (#4502)
+ - [web] don't encode filename extension when exporting folders
 
 4.0.4 (2018-10-23)
 ------------------
